--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -24,14 +24,14 @@
         <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
     </div>
     <!--logo start-->
-    <a href="index.html" class="logo"><b>DASH<span>IO</span></b></a>
+    <a href="#" class="logo"><b>DASH<span>IO</span></b></a>
     <!--logo end-->
     <div class="nav notify-row" id="top_menu">
         <!--  notification start -->
         <ul class="nav top-menu">
             <!-- settings start -->
             <li class="dropdown">
-                <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                     <i class="fa fa-tasks"></i>
                     <span class="badge bg-theme">4</span>
                 </a>
@@ -41,7 +41,7 @@
                         <p class="green">You have 4 pending tasks</p>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <div class="task-info">
                                 <div class="desc">Dashio Admin Panel</div>
                                 <div class="percent">40%</div>
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <div class="task-info">
                                 <div class="desc">Database Update</div>
                                 <div class="percent">60%</div>
@@ -69,7 +69,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <div class="task-info">
                                 <div class="desc">Product Development</div>
                                 <div class="percent">80%</div>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <div class="task-info">
                                 <div class="desc">Payments Sent</div>
                                 <div class="percent">70%</div>
@@ -104,7 +104,7 @@
             <!-- settings end -->
             <!-- inbox dropdown start-->
             <li id="header_inbox_bar" class="dropdown">
-                <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                     <i class="fa fa-envelope-o"></i>
                     <span class="badge bg-theme">5</span>
                 </a>
@@ -114,7 +114,7 @@
                         <p class="green">You have 5 new messages</p>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="photo"><img alt="avatar" src="{{ asset('admin/img/ui-zac.jpg') }}"></span>
                                     <span class="subject">
                                     <span class="from">Zac Snider</span>
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="photo"><img alt="avatar" src="{{ asset('admin/img/ui-divya.jpg') }}"></span>
                                     <span class="subject">
                                     <span class="from">Divya Manian</span>
@@ -138,7 +138,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="photo"><img alt="avatar" src="{{ asset('admin/img/ui-danro.jpg') }}"></span>
                                     <span class="subject">
                                     <span class="from">Dan Rogers</span>
@@ -150,7 +150,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="photo"><img alt="avatar" src="{{ asset('admin/img/ui-sherman.jpg') }}"></span>
                                     <span class=" subject">
                                     <span class="from">Dj Sherman</span>
@@ -162,14 +162,14 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">See all messages</a>
+                        <a href="#">See all messages</a>
                     </li>
                 </ul>
             </li>
             <!-- inbox dropdown end -->
             <!-- notification dropdown start-->
             <li id="header_notification_bar" class="dropdown">
-                <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                     <i class="fa fa-bell-o"></i>
                     <span class="badge bg-warning">7</span>
                 </a>
@@ -179,35 +179,35 @@
                         <p class="yellow">You have 7 new notifications</p>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="label label-danger"><i class="fa fa-bolt"></i></span>
                             Server Overloaded.
                             <span class="small italic">4 mins.</span>
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="label label-warning"><i class="fa fa-bell"></i></span>
                             Memory #2 Not Responding.
                             <span class="small italic">30 mins.</span>
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="label label-danger"><i class="fa fa-bolt"></i></span>
                             Disk Space Reached 85%.
                             <span class="small italic">2 hrs.</span>
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">
+                        <a href="#">
                             <span class="label label-success"><i class="fa fa-plus"></i></span>
                             New User Registered.
                             <span class="small italic">3 hrs.</span>
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#">See all notifications</a>
+                        <a href="#">See all notifications</a>
                     </li>
                 </ul>
             </li>
