Call parent scripts in details page

--- a/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
@@ -96,6 +96,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script>
         // Chart Effects;
         $('.chart-tasks').easyPieChart({
