--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -14,6 +14,13 @@
 {% endblock %}
 
 {% block javascripts %}
+    <!-- Main Scripts-->
+    <script src="{{ asset('assets/js/jquery.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('admin/js/jquery.dcjqaccordion.2.7.js') }}"></script>
+    <script src="{{ asset('admin/js/jquery.scrollTo.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.nicescroll.js') }}"></script>
+    <script src="{{ asset('assets/js/common-scripts.js') }}"></script>
 {% endblock %}
 
 {% block scroll_to_top %}{% endblock %}
@@ -235,115 +242,24 @@
                 <h5 class="centered">Sam Soffes</h5>
 
                 <li class="mt">
-                    <a href="index.html">
+                    <a href="#">
                         <i class="fa fa-dashboard"></i>
                         <span>Dashboard</span>
                     </a>
                 </li>
 
                 <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class="fa fa-desktop"></i>
-                        <span>UI Elements</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="general.html">General</a></li>
-                        <li><a href="buttons.html">Buttons</a></li>
-                        <li><a href="panels.html">Panels</a></li>
-                        <li><a href="font_awesome.html">Font Awesome</a></li>
-                    </ul>
-                </li>
-
-                <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class="fa fa-cogs"></i>
-                        <span>Components</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="grids.html">Grids</a></li>
-                        <li><a href="calendar.html">Calendar</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="todo_list.html">Todo List</a></li>
-                        <li><a href="dropzone.html">Dropzone File Upload</a></li>
-                        <li><a href="inline_editor.html">Inline Editor</a></li>
-                        <li><a href="file_upload.html">Multiple File Upload</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu dcjq-parent-li">
                     <a class="active dcjq-parent" href="javascript:;">
                         <i class="fa fa-book"></i>
-                        <span>Extra Pages</span>
-                        <span class="dcjq-icon"></span></a>
+                        <span>Analizė</span>
+                        <span class="dcjq-icon"></span>
+                    </a>
                     <ul class="sub" style="display: block;">
-                        <li><a href="blank.html">Blank Page</a></li>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="lock_screen.html">Lock Screen</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="invoice.html">Invoice</a></li>
-                        <li><a href="pricing_table.html">Pricing Table</a></li>
-                        <li class="active"><a href="faq.html">FAQ</a></li>
-                        <li><a href="404.html">404 Error</a></li>
-                        <li><a href="500.html">500 Error</a></li>
+                        <li><a href="{{ path('say_and_do_analyzis_homepage') }}">Pridėti naują</a></li>
+                        <li><a href="{{ path('say_and_do_analyzis_homepage.add') }}">Sąrašas</a></li>
+                        <li><a href="{{ path('say_and_do_analyzis_homepage.query') }}">Užklausos</a></li>
                     </ul>
                 </li>
-                <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class="fa fa-tasks"></i>
-                        <span>Forms</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="form_component.html">Form Components</a></li>
-                        <li><a href="advanced_form_components.html">Advanced Components</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="basic_table.html">Basic Table</a></li>
-                        <li><a href="responsive_table.html">Responsive Table</a></li>
-                        <li><a href="advanced_table.html">Advanced Table</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="inbox.html">
-                        <i class="fa fa-envelope"></i>
-                        <span>Mail </span>
-                        <span class="label label-theme pull-right mail-info">2</span>
-                    </a>
-                </li>
-                <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="morris.html">Morris</a></li>
-                        <li><a href="chartjs.html">Chartjs</a></li>
-                        <li><a href="flot_chart.html">Flot Charts</a></li>
-                        <li><a href="xchart.html">xChart</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu dcjq-parent-li">
-                    <a href="javascript:;" class="dcjq-parent">
-                        <i class="fa fa-comments-o"></i>
-                        <span>Chat Room</span>
-                        <span class="dcjq-icon"></span></a>
-                    <ul class="sub" style="display: none;">
-                        <li><a href="lobby.html">Lobby</a></li>
-                        <li><a href="chat_room.html"> Chat Room</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="google_maps.html">
-                        <i class="fa fa-map-marker"></i>
-                        <span>Google Maps </span>
-                    </a>
-                </li>
-
             </ul>
             <!-- sidebar menu end-->
         </div>
