In footer load just widget content

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -148,8 +148,11 @@
                 <!-- contact_details -->
             </div>
             <!-- end widget -->
-            <div id="footer-profiles-list" class="widget col-lg-3 col-md-3 col-sm-12">
-                
+            <div class="widget col-lg-3 col-md-3 col-sm-12">
+                <h4 class="title">Naujausi profiliai</h4>
+                <div id="footer-profiles-list">
+
+                </div>
             </div>
             <!-- end widget -->
         </div>
