--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -103,11 +103,11 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <!-- search -->
-                <div class="search-bar">
+                <div class="search-bar hidden" >
                     <form action="" method="get">
                         <fieldset>
                             <input type="image" src="{{ asset('images/pixel.gif') }}" class="searchsubmit" alt=""/>
-                            <input type="text" class="search_text showtextback" name="s" id="s" value="Search..."/>
+                            <input type="text" class="search_text showtextback" name="s" id="s" value="Paieška"/>
                         </fieldset>
                     </form>
                 </div>
