--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -168,11 +168,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 columns text-right">
                     <div class="footer-menu right">
                         <ul class="menu">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Sitemap</a></li>
-                            <li><a href="#">Site Terms</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="{{ path('say_and_do_profile_homepage') }}">Pagrindinis</a></li>
+                            <li><a href="{{ path('say_and_do_profile_profiles') }}">Profiliai</a></li>
                         </ul>
                     </div>
                 </div>
