Added link to form

--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -11,8 +11,7 @@
 
             <p class="small-title">consectetur adipisicing elit, <br>
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a class="button large" href="pricing-tables.html">UT ENIM AD</a>
-            <a class="dmbutton large" href="contact.html">MINIM VEDIAM</a>
+            <a class="button large" href="{{ path('say_and_do_task_homepage') }}">SKELBTI PAŽADĄ</a>
         </div>
     </section>
     <div class="content col-lg-12 col-md-12 col-sm-12 clearfix">
