--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -65,7 +65,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-12 title-area">
                     <div class="site-title" id="title">
                         <a href="index.html" title="">
-                            <h4>MAX<span>FRONT</span></h4>
+                            <h4>TVIRTAS<span>ŽODIS</span></h4>
                         </a>
                     </div>
                 </div>
