Query page themed

--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -2,15 +2,14 @@
 
 {% block stylesheets %}
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,900,700&subset=latin,latin-ext'
-          rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,900,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
     <!-- Template Styles -->
-    <link rel="stylesheet" href="{{ asset('admin/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('admin/css/style-responsive.css') }}">
+    <link rel="stylesheet" href="{{ asset('admin/css/style.css') }}">
 {% endblock %}
 
 {% block javascripts %}
