--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/add.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/add.html.twig
@@ -2,6 +2,9 @@
 
 {% block inner_content %}
     <div class="row">
+        <div class="col-md-12">
+            <h3><i class="fa fa-angle-right"></i> Pridėkite dokumentą</h3>
+        </div>
         <div class="col-md-offset-3 col-md-6">
             <form role="form" action="{{ path("say_and_do_analyzis_homepage.add") }}" method="post">
                 <div class="form-group">
@@ -16,7 +19,7 @@
                     <label>Turinys</label>
                     <textarea class="form-control" name="content" cols="30" rows="10"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Pridėti dokumentą</button>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Pridėti</button>
             </form>
             <br>
             <br>
