--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/query.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/query.html.twig
@@ -3,10 +3,8 @@
 {% block inner_content %}
     <div class="row">
         <div class="col-md-12">
-            <h3><i class="fa fa-angle-right"></i> F.A.Q</h3>
+            <h3><i class="fa fa-angle-right"></i> Dokumentų analizė</h3>
         </div>
-    </div>
-    <div class="row">
         <div class="col-md-offset-3 col-md-6">
             <h4></h4>
 
