Added link to tasks in admin panel

--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -59,7 +59,18 @@
                 </li>
 
                 <li class="sub-menu dcjq-parent-li">
-                    <a class="active dcjq-parent" href="javascript:;">
+                    <a class="dcjq-parent" href="javascript:;">
+                        <i class="fa fa-book"></i>
+                        <span>Pažadai</span>
+                        <span class="dcjq-icon"></span>
+                    </a>
+                    <ul class="sub" style="display: block;">
+                        <li><a href="{{ path('say_and_do_admin_tasks') }}">Nauji pažadai</a></li>
+                    </ul>
+                </li>
+
+                <li class="sub-menu dcjq-parent-li">
+                    <a class="dcjq-parent" href="javascript:;">
                         <i class="fa fa-book"></i>
                         <span>Dokumentai</span>
                         <span class="dcjq-icon"></span>
