--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -174,7 +174,7 @@
 {% endblock %}
 
 {% block scroll_to_top %}
-    <div class="dmtop">Scroll to Top</div>
+    <div class="dmtop">Į viršų</div>
 {% endblock %}
 
 {% block javascripts %}
