--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -86,7 +86,7 @@
 {% endblock %}
 
 {% block bottom_menu %}
-    <section class="post-wrapper-top">
+    <section class="post-wrapper-top hidden">
         <div class="container">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <ul class="breadcrumb">
@@ -152,7 +152,7 @@
         <div class="copyrights">
             <div class="container">
                 <div class="col-lg-6 col-md-6 col-sm-12 columns">
-                    <p>Copyright © 2014 - All rights reserved. Designed by <a title="Bootstrap Themes"
+                    <p>Copyright © 2014 - Dizainas: <a title="Bootstrap Themes"
                                                                               href="http://alvarez.is">Alvarez</a></p>
                 </div>
                 <!-- end widget -->
