--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -7,11 +7,11 @@
 {% block inner_content %}
     <section class="section2">
         <div class="message text-center">
-            <h2 class="big-title">Lorem ipsum <span>dolor</span> sit amet</h2>
+            <h2 class="big-title">Padėkime <span>politikams prisiminti</span> jų pažadus.</h2>
 
-            <p class="small-title">consectetur adipisicing elit, <br>
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a class="button large" href="{{ path('say_and_do_task_homepage') }}">PRIDĖTI POLITIKO PAŽADĄ</a>
+            <p class="small-title">Šis tinklapis tai pusiau automatizuota sistema, padedanti registruoti, <br/>
+                sekti ir analizuoti politikų pažadus ir jų įvykdymą.</p>
+            <a class="button large intro-action" href="{{ path('say_and_do_task_homepage') }}">PRIDĖTI POLITIKO PAŽADĄ</a>
         </div>
     </section>
     <div class="content col-lg-12 col-md-12 col-sm-12 clearfix">
