--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -179,7 +179,8 @@
 
 {% block javascripts %}
     <!-- Main Scripts-->
-    <script src="{{ asset('assets/js/jquery.js') }}"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('assets/js/jquery.unveilEffects.js') }}"></script>
     <script src="{{ asset('js/retina-1.1.0.js') }}"></script>
@@ -198,34 +199,28 @@
     <script src="{{ asset('js/annotator-full.min.js') }}"></script>
     <script src="{{ asset('js/custom.js') }}"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            $.ajax({
-                url:    "/profiles/newest",
-                type:   "GET",
-                data:   {},
-                success: function (result) {
-                    $("#footer-profiles-list").html(result);
-                }
-            });
+        $.ajax({
+            url:    "/profiles/newest",
+            type:   "GET",
+            data:   {},
+            success: function (result) {
+                $("#footer-profiles-list").html(result);
+            }
+        });
 
-            $.ajax({
-                url:    "/task/recent",
-                type:   "GET",
-                data:   {},
-                success: function (result) {
-                    $("#footer-tasks-list").html(result);
-                }
-            });
-
-
+        $.ajax({
+            url:    "/task/recent",
+            type:   "GET",
+            data:   {},
+            success: function (result) {
+                $("#footer-tasks-list").html(result);
+            }
         });
     </script>
 
 
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script>
-    <script type="application/javascript">
+    <script type="text/javascript">
         var $ = jQuery.noConflict();
 
 
