base template fix

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>{% block title %}MaxFront | Bootstrap Front-End{% endblock %}</title>
+    <title>{% block title %}Tvirtas Žodis{% endblock %}</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
 
     {% block stylesheets %}
         <!-- Google Fonts -->
