--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
@@ -19,7 +19,7 @@
                         <td><a href="{{ path("say_and_do_analyzis_homepage.view", {'id' : document.id}) }}">{{ document.title }}</a> </td>
                         <td>
                             <a class="btn btn-xs btn-danger"
-                               href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}"><i class="fa glyphicon glyphicon-remove"> </i> </a>
+                               href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}"><i class="glyphicon glyphicon-remove"> </i> </a>
                         </td>
                     </tr>
                 {% endfor %}
