--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/query.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/query.html.twig
@@ -12,7 +12,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control" name="query" value="{{ query }}"/>
                     <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary btn-block">Ieškom</button>
+                        <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-search"></i> </button>
                     </span>
                 </div>
                 <!-- /input-group -->
